--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="">
   <div class="night"></div>
-  <div class="birthday-message">Feliz Cumpleaños [Nombre]!</div>
+  <div class="birthday-message">Feliz Cumpleaños Gigi!</div>
   <div class="flowers">
     <div class="flower flower--1">
       <div class="flower__leafs flower__leafs--1">
